--- a/config/email-templates/invoice.html
+++ b/config/email-templates/invoice.html
@@ -88,7 +88,7 @@
         <div class="invoice-header">
             <div class="row">
                 <div class="col-xs-8">
-                    <h1>Invoice <small>With Credit</small></h1>
+                    <h1>Factura</h1>
                     <h4 class="text-muted">NO: 554775/R1 | Date: 01/01/2015</h4>
                 </div>
                 <div class="col-xs-4">
